library/database_universe/test/errors/class/private.dart
// must be public

import 'package:database_universe/database_universe.dart';

@collection
// ignore: unused_element
class _Model {
  late int id;
}
